.vscode/allianceuat_compare/force-app/main/default/objects/SIM_General_Settings__c/SIM_General_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SIM General Settings</label>
</CustomObject>