.vscode/allianceuat_compare/force-app/main/default/objects/SIM_General_Settings__c/fields/Bulk_Shift_Upload_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Shift_Upload_Batch_Size__c</fullName>
    <label>Bulk Shift Upload Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>