.vscode/allianceuat_compare/force-app/main/default/objects/SIM_General_Settings__c/fields/ShiftMatch_Disable_Fill_Flow__c.field-meta.xml
<CustomField>
    <fullName>ShiftMatch_Disable_Fill_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShiftMatch Disable Fill Flow</label>
    <type>Checkbox</type>
</CustomField>