.vscode/allianceuat_compare/force-app/main/default/objects/SIM_General_Settings__c/fields/Shiftmatch_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Shiftmatch_Endpoint__c</fullName>
    <label>Shiftmatch Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>