.vscode/allianceuat_compare/force-app/main/default/objects/SIM_General_Settings__c/fields/Shiftmatch_Minimum_Interval_mins__c.field-meta.xml
<CustomField>
    <fullName>Shiftmatch_Minimum_Interval_mins__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Shiftmatch  Minimum Interval (mins)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>