.vscode/allianceuat_compare/force-app/main/default/objects/SIM_General_Settings__c/fields/Shiftmatch_Scheduler_Name__c.field-meta.xml
<CustomField>
    <fullName>Shiftmatch_Scheduler_Name__c</fullName>
    <defaultValue>&quot;ShiftMatchScheduler&quot;</defaultValue>
    <label>Shiftmatch Scheduler Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>